# 100-days-of-ml

./: .pre-commit-config.yaml  README.md  pyproject.toml
datasets/: 50_Startups.csv  Social_Network_Ads.csv  basic_data.csv  car_data.csv  studentscores.csv
ml_code/: day_1.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_7.ipynb  mds_pcoa.ipynb  principal_component_analysis.ipynb  simple_linear_regression.ipynb  utils.py
