[tool.poetry]
name = "ml-code"
version = "0.1.0"
description = ""
authors = ["Shourya Sharma <0shouryasharma0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
sns = "^0.1"
statsmodels = "^0.14.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[tool.ruff]
extend-include = ["*.ipynb"]
include = [
    "!ml_code/",
    "!tests/",
]
exclude = [
    "*.yaml",
    "*.yml",
    "*.toml",
    "*.lock",
    "datasets/"
]
force-exclude = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
